--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
+    "@types/uuid": "^9.0.1",
     "typescript": "5.0.4"
   },
   "dependencies": {
@@ -22,6 +23,7 @@
     "postcss": "8.4.22",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.1"
+    "tailwindcss": "3.3.1",
+    "uuid": "^9.0.0"
   }
 }
