--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@types/node": "18.15.11",
     "@types/react": "18.0.37",
+    "@types/react-datepicker": "^4.10.0",
     "@types/react-dom": "18.0.11",
     "@types/uuid": "^9.0.1",
     "typescript": "5.0.4"
@@ -21,11 +22,14 @@
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "iconoir-react": "^6.6.0",
+    "immer": "^10.0.1",
     "next": "13.3.0",
     "postcss": "8.4.22",
     "react": "18.2.0",
+    "react-datepicker": "^4.11.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.1",
+    "use-immer": "^0.9.0",
     "uuid": "^9.0.0"
   }
 }
