--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "devDependencies": {
+    "@types/date-fns": "^2.6.0",
     "@types/node": "18.15.11",
     "@types/react": "18.0.37",
     "@types/react-datepicker": "^4.10.0",
@@ -19,6 +20,7 @@
   "dependencies": {
     "@cloudflare/stream-react": "^1.8.0",
     "autoprefixer": "10.4.14",
+    "date-fns": "^2.29.3",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "iconoir-react": "^6.6.0",
