--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@types/react": "18.0.37",
     "@types/react-datepicker": "^4.10.0",
     "@types/react-dom": "18.0.11",
-    "@types/uuid": "^9.0.1",
     "typescript": "5.0.4"
   },
   "dependencies": {
@@ -31,7 +30,6 @@
     "react-datepicker": "^4.11.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.1",
-    "use-immer": "^0.9.0",
-    "uuid": "^9.0.0"
+    "use-immer": "^0.9.0"
   }
 }
